last update for my project

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "ContextConnection": "Server=DESKTOP-GUOHRVD;Database=AonFreelancing;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
+
   "AllowedHosts": "*"
 }
